welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: Missing closing brace `}' assumed here
def haveBaggle():Boolean = {
^Program:11: error: expected class or object definition
if(haveBaggle()) {
^